--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Format = "1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8"
 FrechetDist = "04d82aa0-596e-49d4-9e15-129fccfbf66a"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
